# pyai21

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/pyai21/: __init__.py  completions.py  interpret.py
