[metadata]
name = pyai21
version = 0.0.2
author = ckoshka
description = An interpreter for imaginary Python code + wrapper for the AI21 API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ckoshka/pyai21

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src