[metadata]
name = pyai21
version = 0.0.4
author = ckoshka
description = An interpreter for imaginary Python code + wrapper for the AI21 API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ckoshka/pyai21

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp==3.8.1
    loguru==0.6.0
    python-dotenv==0.19.2
    rapidfuzz==2.0.1
    ujson==5.1.0

[options.packages.find]
where = src